Correctly align buttons to match the initial placements, futher adjustment is necessary at this point.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,10 +30,32 @@ aside>h2 {
 .navbar {
     display:flex;
     justify-content: end;
-    gap:20px;
+    gap: 0.5em;
 }
 
 .navbar > a {
     text-decoration:none;
 }
 
+.top_buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bottom_buttons {
+    display: flex;
+    justify-content: end;
+    gap: 1em;
+}
+
+footer {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+h3 {
+    display:flex;
+    grid-column:1/-1;
+    justify-content:center
+}
